<resources>
	<string name="app_name" translatable="false">Test Ionix</string>

	<string name="welcome">Welcome</string>
	<string name="pay">Pay</string>
	<string name="wallet">Wallet</string>
	<string name="stations">Gas Stations</string>
	<string name="benefits">Benefits</string>
	<string name="messages">Messages</string>
	<string name="settings">Settings</string>
	<string name="loading">Loading…</string>

	<string name="rut" translatable="false">Rut</string>
	<string name="enter_rut">Ingresar Rut</string>
	<string name="user_created">User Created ID: %s</string>
	<string name="rut_rule">Included hyphen but no dots</string>
	<string name="user_registered">User Registered</string>

	<string name="error_generic">An error occurred, please try later</string>
	<string name="error_user_dont_exist">Error, user must be created first</string>
	<string name="error_field_empty">Can\'t be empty</string>
</resources>
