<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	android:background="@drawable/bg_shell">

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/welcome"
		android:layout_margin="16dp"
		android:textStyle="bold"
		android:textColor="@android:color/white"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:columnCount="3"
		android:layout_margin="32dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="4dp"
			android:padding="8dp"
			android:background="@drawable/bg_button"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/main_button_1"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitCenter"
				android:adjustViewBounds="true"
				android:padding="12dp"
				android:src="@drawable/ic_dollar_sign" />
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:text="@string/pay" />
		</androidx.appcompat.widget.LinearLayoutCompat>

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="4dp"
			android:padding="8dp"
			android:background="@drawable/bg_button"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/main_button_2"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitCenter"
				android:adjustViewBounds="true"
				android:padding="12dp"
				android:src="@drawable/ic_wallet" />
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:text="@string/wallet" />
		</androidx.appcompat.widget.LinearLayoutCompat>

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="4dp"
			android:padding="8dp"
			android:background="@drawable/bg_button"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/main_button_3"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitCenter"
				android:adjustViewBounds="true"
				android:padding="12dp"
				android:src="@drawable/ic_map_marker_alt" />
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:text="@string/stations" />
		</androidx.appcompat.widget.LinearLayoutCompat>

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="4dp"
			android:padding="8dp"
			android:background="@drawable/bg_button"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/main_button_4"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitCenter"
				android:adjustViewBounds="true"
				android:padding="12dp"
				android:src="@drawable/ic_tag" />
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:text="@string/benefits" />
		</androidx.appcompat.widget.LinearLayoutCompat>

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="4dp"
			android:padding="8dp"
			android:background="@drawable/bg_button"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/main_button_5"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitCenter"
				android:adjustViewBounds="true"
				android:padding="12dp"
				android:src="@drawable/ic_envelope" />
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:text="@string/messages" />
		</androidx.appcompat.widget.LinearLayoutCompat>

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="4dp"
			android:padding="8dp"
			android:background="@drawable/bg_button"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/main_button_6"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitCenter"
				android:adjustViewBounds="true"
				android:padding="12dp"
				android:src="@drawable/ic_cog" />
			<androidx.appcompat.widget.AppCompatTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/black"
				android:text="@string/settings" />
		</androidx.appcompat.widget.LinearLayoutCompat>

	</GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>